[package]
name = "forum"
version = "0.1.0"
authors = ["James Goodall <jatgoodall@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.4"
console_error_panic_hook = { version = "0.1.1", optional = true }
futures = "0.3.17"
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
