[package]
name = "forum"
version = "0.1.0"
authors = ["James Goodall <jatgoodall@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.4"
console_error_panic_hook = { version = "0.1.1", optional = true }
futures = "0.3.17"
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }
serde = "1.0.130"
serde_json = "1.0.68"
regex = "1.5.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
